Fix white screen with simplified app structure - Design preserved
- Replace complex Layout/Dashboard with simplified components
- Add inline styles to preserve your unique design aesthetic
- Keep all context providers (Theme, Auth, AppData, FocusTimer)
- Add error handling and loading states with your color scheme
- Maintain gradient backgrounds and styling
- App should now load without white screen while keeping design intact

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
       .animate-fade-in-up {
         animation: fade-in-up 0.3s ease-out;
       }
+
+      /* Spinner animation */
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
     </style>
 
 <link rel="stylesheet" href="/index.css">
